2017-12-16  Jim Fowler  <jrf@biblion>

	* Docs/Series/Makefile.am: created book series documentation.
	Modifed ../configure.ac and started series.tex as well as
	HarvardBooksAstronomy.tex.

2017-07-30  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/journalWin.py (JournalWindow.__init__):
	Re-enable entry menu items and create new entry menu. Added symbol
	insert to search edit box. Also added askSaveEntry() when
	selecting an existing entry from the search box.  These
	modification were all based on issues encountered when trying to
	use the journals program.

2017-07-29  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/journalsearch.py (JournalSearch.SearchEditChanged):
	Found search problem. Was using 1-based count instead of 0-based
	count for getting the entries from currentSearchList.

	* Tools/bookentry/journalWin.py (JournalWindow.showSearchSelect):
	Added search capabilities to main entry window.  Wrote
	journalsearch.py to support the dialog box.  Need to find and fix
	problem with search.py not returning values that I expect.

2017-07-17  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/journalSearch.py (JournalSearch.buildSearchDict):
	Added subtitles to search dictionary.

2017-07-15  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/journalSearch.py: Modified journalSearch to use
	a listWidget instead of a combo box.  This was much easier to
	program.

	* Tools/bookentry/developer/ui_JournalSearch.ui: changed comboBox
	to a ListWidget.

2017-07-09  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/journalSearch.py: Got search combo box working
	in journalSearch.py.  Need to add entry display and edit.

2017-05-26  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/symbols.txt: Added superscript 2 and created
	new line of mathematical symbols.

2017-05-26  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/symbols.txt: Added superscript 2 and created
	new line of mathematical symbols.

2017-04-23  Jim Fowler  <jrf@biblion>
